# HW6

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  SHARED_MATCH_RULES.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.dryrun.yaml  config.llm.yaml  config.match.yaml  config.yaml  logging_config.json  rate_limits.json
docs/: COST_ANALYSIS.md  DEPLOY.md  EXPERIMENTS.md  PLAN.md  PRD.md  PRD_agent_strategy.md  PRD_bonus_match.md  PRD_game_engine.md  PRD_gmail_reporting.md  PRD_gui_and_logs.md  PRD_mcp_servers.md  PRD_partial_observability.md  QUALITY_MAPPING.md  SUBMISSION_REPORT.md  TODO.md
docs/examples/: README.md  WEB_GUI.md  sample_report.json  sample_sub_game_excerpt.jsonl  sample_web_gui.html
notebooks/: parameter_sweep.py  results_analysis.ipynb
prompts/: PROMPT_BOOK.md  turn_templates.md
src/cop_thief/: __init__.py  constants.py  main.py
src/cop_thief/agents/: __init__.py  agent_client.py  llm_client.py  providers.py
src/cop_thief/domain/: __init__.py  action.py  barrier.py  game_state.py  observation.py  position.py  records.py  roles.py
src/cop_thief/engine/: __init__.py  movement.py  observation_service.py  referee.py  rules.py  scoring.py
src/cop_thief/gui/: __init__.py  app.py  render.py  web_app.py  web_template.html
src/cop_thief/match/: __init__.py  cli.py  match_orchestrator.py  reconcile.py  remote_cli.py  remote_common.py  remote_match.py  remote_side.py  remote_side_cli.py  team_system.py
src/cop_thief/mcp/: __init__.py  asgi_auth.py  auth.py  contracts.py  cop_server.py  serve.py  server_app.py  smoke.py  thief_server.py  tools.py
src/cop_thief/orchestrator/: __init__.py  orchestrator.py  technical_loss.py  (+1 more)
tests/: conftest.py
tests/integration/: test_local_match.py  test_mcp_contract.py  test_remote_match.py  test_sdk_pipeline.py  test_series.py  test_web_gui_server.py
tests/unit/: test_asgi_auth.py  test_auth.py  test_config.py  test_engine.py  test_gatekeeper.py  test_gmail_reporter.py  test_gui.py  test_llm_client.py  test_llm_strategy.py  test_movement.py  test_observation.py  test_position.py  test_reconcile.py  test_remote_side.py  test_render.py  test_replay.py  test_report.py  test_search.py  test_serve.py  test_strategy.py  test_turn_loop.py
(+24 files in other folders)
