[project]
name = "cop-thief"
version = "1.0.0"
description = "HW6 — Dual AI Agent Race via MCP Servers (Cop & Thief): a partially observable pursuit game."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TODO: Team Name" }]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
# MCP transport (servers). Core orchestrator + tests do not require it.
mcp = ["fastmcp>=2.0"]
# Gmail reporting (real send). Tests mock this; install only for live sending.
gmail = [
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
]
# LLM-driven agents (real provider). Tests use a stub responder; install only
# for live LLM play. The API key comes from the environment, never config.
llm = ["openai>=1.0"]

[project.scripts]
cop-thief = "cop_thief.main:main"
cop-thief-match = "cop_thief.match.cli:main"
cop-thief-remote-match = "cop_thief.match.remote_cli:main"
cop-thief-play-side = "cop_thief.match.remote_side_cli:main"
cop-thief-gui = "cop_thief.gui.app:main"
cop-thief-web-gui = "cop_thief.gui.web_app:main"
cop-thief-cop-server = "cop_thief.mcp.cop_server:main"
cop-thief-thief-server = "cop_thief.mcp.thief_server:main"
cop-thief-smoke = "cop_thief.mcp.smoke:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cop_thief"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/cop_thief/main.py",
    "*/tests/*",
    "src/cop_thief/gui/app.py",
    "src/cop_thief/gui/web_app.py",
    "src/cop_thief/mcp/cop_server.py",
    "src/cop_thief/mcp/thief_server.py",
    "src/cop_thief/mcp/server_app.py",
    "src/cop_thief/mcp/asgi_auth.py",
    "src/cop_thief/agents/providers.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
